FIND_PACKAGE(Qt4)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/liblegacyspc/ )

# Check for debug
IF(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "debug")
	ADD_DEFINITIONS(-DLEGACYSPC_DEBUG)
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "debug")

ADD_SUBDIRECTORY(liblegacyspc)
ADD_SUBDIRECTORY(disassembler)

IF(QT4_FOUND AND QT_QTTEST_FOUND)
	MESSAGE(STATUS "Found at least Qt 4.2, enable the unit tests and the debugger")
	ADD_SUBDIRECTORY(tests)
	ADD_SUBDIRECTORY(debugger)
ELSE(QT4_FOUND AND QT_QTTEST_FOUND)
 	MESSAGE(STATUS "Qt4 was not found. Unit tests and the debugger will be disabled")
ENDIF(QT4_FOUND AND QT_QTTEST_FOUND)
